Fixed text-align

--- a/github-dark-default.css
+++ b/github-dark-default.css
@@ -158,7 +158,7 @@ html {
 }
 
 #write {
-	text-align: justify;
+	text-align: left;
 }
 
 h1,
